--- a/Sass/components/_loader-spinner.scss
+++ b/Sass/components/_loader-spinner.scss
@@ -1,7 +1,6 @@
 /* ************************* Import_Loader spinner ************ */
 .loader-spinner{
   overflow: visible;
-  max-width: $largeurmax-ecran;
   height: 100vh;
   margin: 0;
   background-color: $blanc;
