--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -9,15 +9,15 @@
 /* ************************* Page Accueil ******************* */
 .page-accueil{
   background-color: $blanc;
-  margin:0;
-  padding: 0px;
   display: flex;
   justify-content: center;
 }
 .main-accueil{
   position: absolute;
   animation: cache 3s linear forwards, descente 0.6s ease 3s both;
+  width: 100%;
   margin: 0;
+  padding: 0;
 }
 .presentation{
   display:flex;
@@ -154,7 +154,6 @@ nav{
 .main-restaurants{
   display:flex;
   flex-direction: column;
-  max-width: $largeurmax-ecran; 
   position: relative;
   animation: apparitionProgressive $tpsApparitionProgressive;
 }
