--- a/Sass/utils/_variables.scss
+++ b/Sass/utils/_variables.scss
@@ -1,5 +1,4 @@
 /* **************************Import variables.scss ***************** */
-$largeurmax-ecran: 420px;
 $tpsApparitionProgressive: 2s;
 $primaryColor: #9356DC;
 $secondaryColor: #FF79DA;
